[gd_scene load_steps=2 format=3 uid="uid://bh67nabp65cem"]

[ext_resource type="Script" path="res://game/menu/main_menu.gd" id="1_h0be0"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 9.0
offset_right = 4.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h0be0")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 68.0
offset_right = 255.0
offset_bottom = 108.0
text = "HOST"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 126.0
offset_top = 133.0
offset_right = 251.0
offset_bottom = 164.0
text = "JOIN"

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_right = 123.0
offset_bottom = 37.0
text = "127.0.0.1"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
